--- a/a_propos.html
+++ b/a_propos.html
@@ -7,5 +7,12 @@
 </head>
 <body>
     <h1>A propos</h1>
+    <ul>
+        <li><a href=""></a></li>
+        <li><a href=""></a></li>
+        <li><a href=""></a></li>
+        <li><a href=""></a></li>
+        <li><a href=""></a></li>
+    </ul>
 </body>
 </html>
