--- a/a_propos.html
+++ b/a_propos.html
@@ -6,6 +6,7 @@
     <title>Cours 05</title>
 </head>
 <body>
+    <!-- Danilo -->
     <h1>A propos</h1>
     <ul>
         <li><a href=""></a></li>
