--- a/contact.html
+++ b/contact.html
@@ -7,5 +7,12 @@
 </head>
 <body>
     <h1>Contact</h1>
+    <ul>
+        <li><a href=""></a></li>
+        <li><a href=""></a></li>
+        <li><a href=""></a></li>
+        <li><a href=""></a></li>
+        <li><a href=""></a></li>
+    </ul>
 </body>
 </html>
