--- a/index.html
+++ b/index.html
@@ -7,5 +7,23 @@
 </head>
 <body>
     <h1>Accueil</h1>
+    <h2>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Illum, obcaecati.</h2>
+    <ul>
+        <li>
+            <a href="">
+                <link rel="stylesheet" href="">
+            </a>
+        </li>
+        <li>
+            <a href="">
+                <link rel="stylesheet" href="">
+            </a>
+        </li>
+        <li>
+            <a href="">
+                <link rel="stylesheet" href="">
+            </a>
+        </li>
+    </ul>
 </body>
 </html>
